<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorBright"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/Margin16dp"
        android:layout_marginLeft="@dimen/Margin16dp"
        android:layout_marginTop="@dimen/Margin16dp"
        android:layout_marginEnd="@dimen/Margin16dp"
        android:layout_marginRight="@dimen/Margin16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_mainNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainNotes"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize16sp"/>

        <TextView
            android:id="@+id/tv_mainAnnouncement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize14sp" />

        <TextView
            android:id="@+id/tv_mainHowToUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainHowtoUse"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_mainTutorial0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/MainTutorial0"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize14sp" />

        <TextView
            android:id="@+id/tv_mainTutorial1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/MainTutorial1"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize14sp" />

        <TextView
            android:id="@+id/tv_mainTutorial2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/MainTutorial2"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize14sp" />

        <TextView
            android:id="@+id/tv_mainTutorial3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/MainTutorial3"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/TextSize14sp" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvMain"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:itemIconTint="@color/ColorBlue"
        app:menu="@menu/navigation_menu" />

</android.support.v4.widget.DrawerLayout>