<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/border"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/Margin8dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_territorytitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextId"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextOwner"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_territorytitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextRegion"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_territorytitle12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextState"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_territorytitle13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTerritory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryTerritory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTax"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextProduction"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextManpower"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryManpower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextReligion"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryReligion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextCulture"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryCulture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTradeGoods"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryTradeGoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTradeNode"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryTradeNode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_territorytitle11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextPermanentMod"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_territoryPermanentMod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

</TableLayout>