<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/border"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/Margin8dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_stattitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextState"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_statRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_stattitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTotTax"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_statTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_stattitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTotProduction"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_statProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_stattitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTotManpower"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_statManpower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_stattitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:text="@string/TextTotTerritory"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />

        <TextView
            android:id="@+id/tv_statTerritory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Padding6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize16sp" />
    </TableRow>

</TableLayout>